<resources>
    <string name="app_name">LikesView</string>
    <string name="onboarding_title">Descubra o número de curtidas em qualquer perfil do Insta</string>
    <string name="onboarding_complete">Começar</string>
    <string name="add_first_profile_text">Visualizar curtidas</string>
    <string name="add_first_profile_title">Vamos começar?</string>
    <string name="add_first_profile_description">Basta digitar o nome de usuário abaixo para conferir a quantidade de curtidas em todas as postagem daquele perfil.</string>
    <string name="instagram_username_label_indicator">Usuário do Instagram</string>
    <string name="instagram_username_hint">Digite o nome de usuário</string>
    <string name="instagram_username_pattern">\@%1$s</string>
    <string name="instagram_verified_profile">Perfil Verificado</string>
    <string name="likes_amount_description">Número de Curtidas</string>
    <string name="media_gallery_description">Galeria de Fotos</string>
    <string name="followers">Seguidores</string>
    <string name="following">Seguindo</string>
    <string name="instagram_post_amount">Total de postagens</string>
    <string name="instagram_mean_like">Média de curtidas</string>
    <string name="like_amount_media_details">Total de Curtidas</string>
</resources>
